# weather-etl-api

./: .env.example  .flake8  .gitignore  Dockerfile_api  Dockerfile_etl  Makefile  README.md  __init__.py  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
api/: main.py
etl/: extract.py  load.py  main_etl.py  start_etl.sh  transform.py
jupyter notebook/: Notebook_RESULTADOS.ipynb
tests/: conftest.py  test_api.py  test_extract.py  test_load.py  test_transform.py
